--- a/digital_clock/pubspec.yaml
+++ b/digital_clock/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     path: ../flutter_clock_helper
   cupertino_icons: ^0.1.2
   simple_animations: ^1.3.4
+  weather_icons: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -20,24 +21,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   fonts:
-    - family: PressStart2P
-      fonts:
-        - asset: third_party/PressStart2P-Regular.ttf
-    - family: VarelaRound
-      fonts:
-        - asset: google_fonts/Varela_Round/VarelaRound-Regular.ttf
-    - family: Oswald
-      fonts:
-        - asset: google_fonts/Oswald/Oswald-VariableFont:wght.ttf
-    - family: PermanentMarker
-      fonts:
-        - asset: google_fonts/Permanent_Marker/PermanentMarker-Regular.ttf
-    - family: CreteRound
-      fonts:
-        - asset: google_fonts/Crete_Round/CreteRound-Regular.ttf
-    - family: Rajdhani
-      fonts:
-        - asset: google_fonts/Rajdhani/Rajdhani-Bold.ttf
     - family: Poppins
       fonts:
         - asset: google_fonts/Poppins/Poppins-Bold.ttf
